--- a/website/content/faq.yaml
+++ b/website/content/faq.yaml
@@ -16,11 +16,11 @@
 
 - question: "Как получить доступ к курсу?"
   answer: |
-    Перейдите в раздел "Ссылки на курс" из меню навигации сверху.
+    Перейдите в раздел "Присоединиться" из меню навигации сверху.
 
 - question: "Подходит ли мне этот курс?"
   answer: >
-    Пожалуйста, для начала ознакомьтесь с основами основ Python,  
+    Пожалуйста, для начала ознакомьтесь с основами основ Python,
     а также посмотрите на ютубе (и других площадках), как Сурен преподаёт.
     Если это не ваш формат, то и курс Сурена вам не подходит.
 
