--- a/website/content/course-links.yaml
+++ b/website/content/course-links.yaml
@@ -6,7 +6,7 @@ platforms:
     description: "Прием платежей со всего мира! Любые карточки, и не только. Если возникают сложности с оплатой, свяжитесь со мной."
     url: "https://learn.mahenzon.ru/public/product/2f21dd78-666e-4806-9046-818353d6fc1b/tariffs"
     buttonText: "Перейти к курсу"
-    note: 💡 Если вы хотите оформить программу на юр. лицо и оплатить по счёту, свяжитесь со мной (контакты ниже)."
+    note: "💡 Если вы хотите оформить программу на юр. лицо и оплатить по счёту, свяжитесь со мной (контакты ниже)."
     order: 1
 
   - id: stepik
