--- a/website/content/faq.yaml
+++ b/website/content/faq.yaml
@@ -1,8 +1,8 @@
 - question: "Можно ли проходить курс в своём темпе?"
   answer: |
     Да!
-    Курс полностью асинхронный. Вы можете учиться в удобное для вас время и темпе.
-    Нет жёстких дедлайнов и расписаний. Изучайте материалы когда вам удобно.
+    Курс полностью асинхронный. Вы можете учиться в удобное для вас время и в удобном темпе.
+    Нет жёстких дедлайнов и расписаний. Изучайте материалы, когда вам удобно.
 
 - question: "Можно ли проходить модули не по порядку?"
   answer: >
@@ -16,12 +16,12 @@
 
 - question: "Как получить доступ к курсу?"
   answer: |
-    Перейдите в раздел "Присоединиться" из меню навигации сверху.
+    Перейдите в раздел «Присоединиться» из меню навигации сверху.
 
 - question: "Подходит ли мне этот курс?"
   answer: >
     Пожалуйста, для начала ознакомьтесь с основами основ Python,
-    а также посмотрите на ютубе (и других площадках), как Сурен преподаёт.
+    а также посмотрите на YouTube (и других площадках), как Сурен преподаёт.
     Если это не ваш формат, то и курс Сурена вам не подходит.
 
 
@@ -35,16 +35,16 @@
     Если вы решили, что курс вам подходит, то убедитесь,
     что вы уже умеете отличать функции от классов,
     знаете, в каком стиле называть переменные,
-    а также понимаете, что программирование это непросто.
+    а также понимаете, что программирование — это непросто.
 
 - question: "Нужен ли компьютер для прохождения курса?"
   answer: >
-    Я считаю, что да. Любого современного компьютера хватит (если он не старше десяти лет).
+    Я считаю, что да. Любой современный компьютер подойдёт (если он не старше десяти лет).
 
 
     На курсе есть студент, который пишет код с телефона.
-    Это несёт за собой огромные сложности и превозмогания,
-    а код приходится запускать на удаленном сервере.
+    Это несёт за собой огромные сложности и требует превозмогания,
+    а код приходится запускать на удалённом сервере.
     Но если вам очень хочется, то это реально. Не рекомендую.
 
 - question: "Есть ли поддержка от преподавателя?"
@@ -68,12 +68,12 @@
 
 - question: "Почему цена на площадках различается?"
   answer: |
-    На сайте курса цена ниже, а на Stepik выше.
+    На сайте курса цена ниже, а на Stepik — выше.
     Это связано с повышенной комиссией, которую мне приходится отдавать площадке.
 
-- question: "В чем отличие программ на разных площадках?"
+- question: "В чём отличие программ на разных площадках?"
   answer: >
-    Разницы между программами нет, весь материал публикуется на обе площадки одновременно.
+    Разницы между программами нет: весь материал публикуется на обе площадки одновременно.
 
 
     Отличие будет в интерфейсе и формате автоматических тестов:
