--- a/website/content/home-content.yaml
+++ b/website/content/home-content.yaml
@@ -1,16 +1,16 @@
 whatYouLearn:
-  - "Разрабатывать реальные веб-приложения на Python на разных фреймворках: FastAPI, Django, и не только"
+  - "Разрабатывать реальные веб-приложения на Python на разных фреймворках: FastAPI, Django и не только"
   - "Взаимодействовать с базой данных на чистом SQL и при помощи ORM"
   - "Отлаживать и оптимизировать приложение"
   - "Тестировать код с unittest и pytest"
   - "Следить за чистотой и читаемостью кода"
-  - "Публиковать проект на продакшн сервер"
-  - "Настраивать автоматический деплой проекта через CI / CD"
+  - "Публиковать проект на продакшн-сервер"
+  - "Настраивать автоматический деплой проекта через CI/CD"
   - "Приобретать домен и привязывать SSL сертификат"
 
 forWhom:
   - "Этот материал подходит для всех, кто хочет повысить свой скилл."
-  - "Например, если вы уже начинали изучать программирование, и хотите структурировать свои знания, а также добавить себе пару проектов в портфолио. Возможно, вы уже писали телеграм-ботов или веб-приложения на Python или других языках программирования. В этом материале я проведу вас за ручку через сложности вкатывания в новую тему и дам вам все инструменты для самостоятельной работы."
+  - "Например, если вы уже начинали изучать программирование и хотите структурировать свои знания, а также добавить себе пару проектов в портфолио. Возможно, вы уже писали телеграм-ботов или веб-приложения на Python или других языках программирования. В этом материале я проведу вас за ручку через сложности вкатывания в новую тему и дам вам все инструменты для самостоятельной работы."
   - "Если вы только думаете познакомиться с программированием и веб-разработкой на Python. Важно! В данный момент ещё не готовы занятия по основам основ работы с Python: что это такое, функции, классы. По этим темам мы пробежимся поверхностно и только в рамках решения более сложных задач."
 
 requirements:
@@ -21,15 +21,15 @@ requirements:
 
 howItWorks:
   - "Образовательный материал состоит из занятий нескольких типов:"
-  - "Видеолекции - я показываю экран компьютера, веду лайв-кодинг и рассказываю каждый свой шаг, объясняя вам, почему тут нужно сделать именно так, а не иначе. Короткие введения на 2-5 минут, уроки по 10-15 минут, а также погружения в новые темы на 20 минут."
-  - "Почти каждое занятие сопровождается заданием. Это может быть тест, текстовое задание, или задача на написание кода. Многие задания проверяются автоматически. Остальные проверяются вручную."
-  - "По любым сложностям я отвечу в телеграм-чате. Также вопросы можно будет задавать на онлайн-консультации, которые я провожу раз в 3-5 недель. Если будет большой спрос на консультации, участим до пары раз в месяц."
+  - "Видеолекции — я показываю экран компьютера, веду лайв-кодинг и рассказываю каждый свой шаг, объясняя вам, почему тут нужно сделать именно так, а не иначе. Короткие введения на 2–5 минут, уроки по 10–15 минут, а также погружения в новые темы на 20 минут."
+  - "Почти каждое занятие сопровождается заданием. Это может быть тест, текстовое задание или задача на написание кода. Многие задания проверяются автоматически. Остальные проверяются вручную."
+  - "По любым сложностям я отвечу в телеграм-чате. Также вопросы можно будет задавать на онлайн-консультациях, которые я провожу раз в 3–5 недель. Если будет большой спрос на консультации, участим их до пары раз в месяц."
 
 whatYouGet:
-  - "Много видеороликов - всё ещё идёт процесс записи, опубликовано уже более 250 уроков"
-  - "Очень много практики - почти после каждого видео идёт практическое задание"
+  - "Много видеороликов — всё ещё идёт процесс записи, опубликовано уже более 250 уроков"
+  - "Очень много практики — почти после каждого видео идёт практическое задание"
   - "Ведение ваших проектов, ревью проекта, обратная связь"
-  - "Ежедневная помощь в чате - отвечает Сурен и другие участники"
+  - "Ежедневная помощь в чате — отвечает Сурен и другие участники"
   - "Регулярные групповые онлайн-встречи для решения любых вопросов по коду"
   - "Опыт реальной разработки проекта с нуля и до запуска в продакшн"
 
