update coming soon text

--- a/website/content/modules.yaml
+++ b/website/content/modules.yaml
@@ -119,7 +119,11 @@ modules:
     status: "in_development"
     ghostTopic:
       enabled: true
-      customText: "Мы уже начали работать с Postgres и уже прошли ограничения, впереди работа группировками, функциями и триггерами, а затем и с внешними ключами."
+      customText: >
+        Мы уже начали работать с Postgres и уже прошли ограничения,
+        впереди работа с группировками, функциями и триггерами.
+        Эти темы уже записаны, ждут публикации.
+        После этого перейдём к работе с внешними ключами.
     tech:
       - icon-name: "SQL"
         text: "SQL запросы"
