update SQL modules

--- a/website/content/modules.yaml
+++ b/website/content/modules.yaml
@@ -120,8 +120,8 @@ modules:
     ghostTopic:
       enabled: true
       customText: >
-        Мы уже начали работать с Postgres и уже прошли ограничения,
-        впереди работа с группировками, функциями и триггерами.
+        Мы уже начали работать с Postgres, прошли основы основ, ограничения, перечисления.
+        Впереди работа с группировками, функциями, триггерами.
         Эти темы уже записаны, ждут публикации.
         После этого перейдём к работе с внешними ключами.
     tech:
