add group by and agg modules info

--- a/website/content/modules.yaml
+++ b/website/content/modules.yaml
@@ -120,10 +120,12 @@ modules:
     ghostTopic:
       enabled: true
       customText: >
-        Мы уже начали работать с Postgres, прошли основы основ, ограничения, перечисления.
-        Впереди работа с группировками, функциями, триггерами.
+        Мы уже начали работать с Postgres, прошли основы основ, ограничения,
+        перечисления, группировки.
+        Впереди работа с функциями и триггерами.
         Эти темы уже записаны, ждут публикации.
-        После этого перейдём к работе с внешними ключами.
+        После этого разберемся с внешними ключами
+        и посмотрим на разные типы связей между таблицами.
     tech:
       - icon-name: "SQL"
         text: "SQL запросы"
