add RETURNING module info

--- a/website/content/modules.yaml
+++ b/website/content/modules.yaml
@@ -124,7 +124,7 @@ modules:
         перечисления, группировки.
         Впереди работа с функциями и триггерами.
         Эти темы уже записаны, ждут публикации.
-        После этого разберемся с внешними ключами
+        Затем разберемся с внешними ключами
         и посмотрим на разные типы связей между таблицами.
     tech:
       - icon-name: "SQL"
