--- a/website/content/modules.yaml
+++ b/website/content/modules.yaml
@@ -121,10 +121,8 @@ modules:
       enabled: true
       customText: >
         Мы уже начали работать с Postgres, прошли основы основ, ограничения,
-        перечисления, группировки.
-        Впереди работа с функциями и триггерами.
-        Эти темы уже записаны, ждут публикации.
-        Затем разберемся с внешними ключами
+        перечисления, группировки. Поработали с функциями и триггерами.
+        Скоро начнём разбираться с внешними ключами
         и посмотрим на разные типы связей между таблицами.
     tech:
       - icon-name: "SQL"
